# re-dotnet-patch

./: .gitignore  CLAUDE.md  README.md  SECURITY.md  pyproject.toml
dotnet/Patcher.Cli/: Patcher.Cli.csproj  Patcher.cs  Program.cs
src/re_dotnet_patch/: __init__.py  __main__.py  patcher.py  runner.py  server.py
